# crafting-interpreters

./: .gitignore  README.md
clox/: hello_world.c
jlox/: .gitignore  Makefile
jlox/com/craftinginterpreters/lox/: AstPrinter.java  Expr.java  Lox.java  Parser.java  Scanner.java
jlox/com/craftinginterpreters/tool/: GenerateAst.java
plox/: .gitignore  Makefile  pyproject.toml
plox/lox/: ast_printer.py  environment.py  errors.py  expr.py  interpreter.py  lox.py  lox_callable.py  lox_class.py  lox_function.py  main.py  parser.py  resolver.py  scanner.py  stmt.py  token_type.py  tokens.py
